--- a/_config.yml
+++ b/_config.yml
@@ -111,5 +111,8 @@ friends: [
     },{
         title: "Ycr",
         href: "http://ycrpro.com/"
+    },{
+        title: "BigBother",
+        href: "https://blog.csdn.net/A_Comme_Amour"
     }
 ]
