--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ service-worker: true
 
 # Friends
 friends: [
+   description: "同舍生"
     {
     #     title: "Su",
     #     href: "http://su.gallery/"
@@ -114,5 +115,8 @@ friends: [
     },{
         title: "BigBother",
         href: "https://blog.csdn.net/A_Comme_Amour"
+    },{
+        title: "Collation&Seek Group",
+        href: "http://zwcblog.top./"
     }
 ]
