--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ friends: [
         title: "BigBother",
         href: "https://blog.csdn.net/A_Comme_Amour"
     },{
-        title: "A",
+        title: "Collation&Seek Group",
         href: "http://zwcblog.top./"
     }
 ]
