--- a/_config.yml
+++ b/_config.yml
@@ -117,5 +117,8 @@ friends: [
     },{
         title: "Collation&Seek Group",
         href: "http://zwcblog.top./"
+    },{
+        title: "ljy",
+        href: "https://hachimanjy.github.io/"
     }
 ]
