--- a/_config.yml
+++ b/_config.yml
@@ -120,5 +120,8 @@ friends: [
     },{
         title: "ljy",
         href: "https://hachimanjy.github.io/"
+    },{
+        title: "cjc",
+        href: "https://comeintocalm.cn/"
     }
 ]
