--- a/_config.yml
+++ b/_config.yml
@@ -123,5 +123,8 @@ friends: [
     },{
         title: "cjc",
         href: "https://comeintocalm.cn/"
+    },{
+        title: "子谦。",
+        href: "http://www.cnblogs.com/hanruyun/"
     }
 ]
