--- a/_config.yml
+++ b/_config.yml
@@ -126,5 +126,8 @@ friends: [
     },{
         title: "子谦。",
         href: "http://www.cnblogs.com/hanruyun/"
+    },{
+        title: "yyb",
+        href: "https://www.cnblogs.com/cjyyb/"
     }
 ]
