--- a/_config.yml
+++ b/_config.yml
@@ -131,5 +131,8 @@ friends: [
     },{
         title: "yyb",
         href: "https://www.cnblogs.com/cjyyb/"
+    },{
+        title: "Dfkdsmbd",
+        href: "dfkdsmbd.cc"
     }
 ]
