--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,6 @@ friends: [
         href: "https://www.cnblogs.com/cjyyb/"
     },{
         title: "Dfkdsmbd",
-        href: "dfkdsmbd.cc"
+        href: "https://dfkdsmbd.cc/"
     }
 ]
