--- a/_config.yml
+++ b/_config.yml
@@ -134,5 +134,8 @@ friends: [
     },{
         title: "Dfkdsmbd",
         href: "https://dfkdsmbd.cc/"
+    },{
+        title: "attack",
+        href: "https://blog.attack204.com/"
     }
 ]
