--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ friends: [
         title: "Dfkdsmbd",
         href: "https://dfkdsmbd.cc/"
     },{
-        title: "attack",
+        title: "attack204",
         href: "https://blog.attack204.com/"
     }
 ]
