--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ ga_domain: auto
 
 # Sidebar settings
 sidebar: true                   # whether or not using Sidebar.
-sidebar-about-description: "我真是嗨到不行啊"
+sidebar-about-description: "和所有人都搞好关系果然是不可能完成的任务"
 sidebar-avatar: /img/qaq/1.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
