--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ ga_domain: auto
 
 # Sidebar settings
 sidebar: true                   # whether or not using Sidebar.
-sidebar-about-description: "Vater,vergib ihnen"
+sidebar-about-description: "Denn sie wissen nicht was sie tun"
 sidebar-avatar: /img/qaq/1.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
